添加字符串切割的方法

--- a/FeiLib/FeiLib.vcxproj
+++ b/FeiLib/FeiLib.vcxproj
@@ -37,6 +37,7 @@
     </ClCompile>
     <ClCompile Include="src\reflection\enum\enum_reflection.cpp" />
     <ClCompile Include="src\utility\utility_func.cpp" />
+    <ClCompile Include="src\utility\utility_string.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\all_header.h" />
@@ -48,6 +49,7 @@
     <ClInclude Include="src\reflection\reflection.h" />
     <ClInclude Include="src\utility\lazy_singleton.h" />
     <ClInclude Include="src\utility\utility_func.h" />
+    <ClInclude Include="src\utility\utility_string.h" />
     <ClInclude Include="src\utility\utility_traits.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
